--- a/prepros.cfg
+++ b/prepros.cfg
@@ -2291,19 +2291,6 @@
           "height": 0,
           "width": 0
         },
-        "4b713921": {
-          "id": "4b713921",
-          "path": "home/images/bg1-videoelproyecto.jpg",
-          "output": "home/images/bg1-videoelproyecto.jpg",
-          "name": "bg1-videoelproyecto.jpg",
-          "category": "IMAGE",
-          "size": 111466,
-          "type": "jpg",
-          "initialSize": 111466,
-          "optimized": false,
-          "height": 0,
-          "width": 0
-        },
         "905d80aa": {
           "id": "905d80aa",
           "path": "home/images/bg1-videooficinas.jpg",
@@ -2534,19 +2521,6 @@
           "size": 1801,
           "type": "png",
           "initialSize": 1801,
-          "optimized": false,
-          "height": 0,
-          "width": 0
-        },
-        "14cb0593": {
-          "id": "14cb0593",
-          "path": "home/images/logo.png",
-          "output": "home/images/logo.png",
-          "name": "logo.png",
-          "category": "IMAGE",
-          "size": 1158,
-          "type": "png",
-          "initialSize": 1158,
           "optimized": false,
           "height": 0,
           "width": 0
@@ -8402,6 +8376,448 @@
           "size": 264632,
           "type": "jpg",
           "initialSize": 264632,
+          "optimized": false,
+          "height": 0,
+          "width": 0
+        },
+        "5beff02d": {
+          "id": "5beff02d",
+          "path": "home/images/portfolio/img-elproyecto1.jpg",
+          "output": "home/images/portfolio/img-elproyecto1.jpg",
+          "name": "img-elproyecto1.jpg",
+          "category": "IMAGE",
+          "size": 46799,
+          "type": "jpg",
+          "initialSize": 46799,
+          "optimized": false,
+          "height": 0,
+          "width": 0
+        },
+        "494326c1": {
+          "id": "494326c1",
+          "path": "home/images/portfolio/img-elproyecto1g.jpg",
+          "output": "home/images/portfolio/img-elproyecto1g.jpg",
+          "name": "img-elproyecto1g.jpg",
+          "category": "IMAGE",
+          "size": 253585,
+          "type": "jpg",
+          "initialSize": 253585,
+          "optimized": false,
+          "height": 0,
+          "width": 0
+        },
+        "a803367e": {
+          "id": "a803367e",
+          "path": "home/images/portfolio/img-elproyecto2.jpg",
+          "output": "home/images/portfolio/img-elproyecto2.jpg",
+          "name": "img-elproyecto2.jpg",
+          "category": "IMAGE",
+          "size": 4088,
+          "type": "jpg",
+          "initialSize": 4088,
+          "optimized": false,
+          "height": 0,
+          "width": 0
+        },
+        "cb78a95d": {
+          "id": "cb78a95d",
+          "path": "home/images/portfolio/img-elproyecto3.jpg",
+          "output": "home/images/portfolio/img-elproyecto3.jpg",
+          "name": "img-elproyecto3.jpg",
+          "category": "IMAGE",
+          "size": 23282,
+          "type": "jpg",
+          "initialSize": 23282,
+          "optimized": false,
+          "height": 0,
+          "width": 0
+        },
+        "fddfa25d": {
+          "id": "fddfa25d",
+          "path": "home/images/portfolio/img-elproyecto3g.jpg",
+          "output": "home/images/portfolio/img-elproyecto3g.jpg",
+          "name": "img-elproyecto3g.jpg",
+          "category": "IMAGE",
+          "size": 117076,
+          "type": "jpg",
+          "initialSize": 117076,
+          "optimized": false,
+          "height": 0,
+          "width": 0
+        },
+        "7780a7bb": {
+          "id": "7780a7bb",
+          "path": "home/images/portfolio/img-elproyecto4.jpg",
+          "output": "home/images/portfolio/img-elproyecto4.jpg",
+          "name": "img-elproyecto4.jpg",
+          "category": "IMAGE",
+          "size": 4040,
+          "type": "jpg",
+          "initialSize": 4040,
+          "optimized": false,
+          "height": 0,
+          "width": 0
+        },
+        "31c2bdbc": {
+          "id": "31c2bdbc",
+          "path": "home/images/portfolio/img-elproyecto5.jpg",
+          "output": "home/images/portfolio/img-elproyecto5.jpg",
+          "name": "img-elproyecto5.jpg",
+          "category": "IMAGE",
+          "size": 38050,
+          "type": "jpg",
+          "initialSize": 38050,
+          "optimized": false,
+          "height": 0,
+          "width": 0
+        },
+        "1ee48628": {
+          "id": "1ee48628",
+          "path": "home/images/portfolio/img-elproyecto5g.jpg",
+          "output": "home/images/portfolio/img-elproyecto5g.jpg",
+          "name": "img-elproyecto5g.jpg",
+          "category": "IMAGE",
+          "size": 202615,
+          "type": "jpg",
+          "initialSize": 202615,
+          "optimized": false,
+          "height": 0,
+          "width": 0
+        },
+        "9eec8117": {
+          "id": "9eec8117",
+          "path": "home/images/portfolio/img-elproyecto6.jpg",
+          "output": "home/images/portfolio/img-elproyecto6.jpg",
+          "name": "img-elproyecto6.jpg",
+          "category": "IMAGE",
+          "size": 4048,
+          "type": "jpg",
+          "initialSize": 4048,
+          "optimized": false,
+          "height": 0,
+          "width": 0
+        },
+        "29c2830d": {
+          "id": "29c2830d",
+          "path": "home/images/portfolio/img-elproyecto7.jpg",
+          "output": "home/images/portfolio/img-elproyecto7.jpg",
+          "name": "img-elproyecto7.jpg",
+          "category": "IMAGE",
+          "size": 40965,
+          "type": "jpg",
+          "initialSize": 40965,
+          "optimized": false,
+          "height": 0,
+          "width": 0
+        },
+        "ae3335c3": {
+          "id": "ae3335c3",
+          "path": "home/images/portfolio/img-elproyecto7g.jpg",
+          "output": "home/images/portfolio/img-elproyecto7g.jpg",
+          "name": "img-elproyecto7g.jpg",
+          "category": "IMAGE",
+          "size": 216734,
+          "type": "jpg",
+          "initialSize": 216734,
+          "optimized": false,
+          "height": 0,
+          "width": 0
+        },
+        "2a26f2ef": {
+          "id": "2a26f2ef",
+          "path": "home/images/portfolio/img-elproyecto8.jpg",
+          "output": "home/images/portfolio/img-elproyecto8.jpg",
+          "name": "img-elproyecto8.jpg",
+          "category": "IMAGE",
+          "size": 3941,
+          "type": "jpg",
+          "initialSize": 3941,
+          "optimized": false,
+          "height": 0,
+          "width": 0
+        },
+        "b0a70a61": {
+          "id": "b0a70a61",
+          "path": "home/images/arq2.jpg",
+          "output": "home/images/arq2.jpg",
+          "name": "arq2.jpg",
+          "category": "IMAGE",
+          "size": 9228,
+          "type": "jpg",
+          "initialSize": 9228,
+          "optimized": false,
+          "height": 0,
+          "width": 0
+        },
+        "723c477e": {
+          "id": "723c477e",
+          "path": "home/images/arq1.jpg",
+          "output": "home/images/arq1.jpg",
+          "name": "arq1.jpg",
+          "category": "IMAGE",
+          "size": 8651,
+          "type": "jpg",
+          "initialSize": 8651,
+          "optimized": false,
+          "height": 0,
+          "width": 0
+        },
+        "3b6ae131": {
+          "id": "3b6ae131",
+          "path": "home/images/arq3.jpg",
+          "output": "home/images/arq3.jpg",
+          "name": "arq3.jpg",
+          "category": "IMAGE",
+          "size": 9922,
+          "type": "jpg",
+          "initialSize": 9922,
+          "optimized": false,
+          "height": 0,
+          "width": 0
+        },
+        "acd4795d": {
+          "id": "acd4795d",
+          "path": "home/images/arq4.jpg",
+          "output": "home/images/arq4.jpg",
+          "name": "arq4.jpg",
+          "category": "IMAGE",
+          "size": 7859,
+          "type": "jpg",
+          "initialSize": 7859,
+          "optimized": false,
+          "height": 0,
+          "width": 0
+        },
+        "8d1008b3": {
+          "id": "8d1008b3",
+          "path": "home/images/arq5.jpg",
+          "output": "home/images/arq5.jpg",
+          "name": "arq5.jpg",
+          "category": "IMAGE",
+          "size": 7287,
+          "type": "jpg",
+          "initialSize": 7287,
+          "optimized": false,
+          "height": 0,
+          "width": 0
+        },
+        "04193f24": {
+          "id": "04193f24",
+          "path": "home/images/logoarq1.jpg",
+          "output": "home/images/logoarq1.jpg",
+          "name": "logoarq1.jpg",
+          "category": "IMAGE",
+          "size": 2764,
+          "type": "jpg",
+          "initialSize": 2764,
+          "optimized": false,
+          "height": 0,
+          "width": 0
+        },
+        "dcc4c222": {
+          "id": "dcc4c222",
+          "path": "home/images/logoarq2.jpg",
+          "output": "home/images/logoarq2.jpg",
+          "name": "logoarq2.jpg",
+          "category": "IMAGE",
+          "size": 3548,
+          "type": "jpg",
+          "initialSize": 3548,
+          "optimized": false,
+          "height": 0,
+          "width": 0
+        },
+        "3fa9f5e1": {
+          "id": "3fa9f5e1",
+          "path": "home/images/logoarq3.jpg",
+          "output": "home/images/logoarq3.jpg",
+          "name": "logoarq3.jpg",
+          "category": "IMAGE",
+          "size": 2287,
+          "type": "jpg",
+          "initialSize": 2287,
+          "optimized": false,
+          "height": 0,
+          "width": 0
+        },
+        "1f3d2dd9": {
+          "id": "1f3d2dd9",
+          "path": "home/images/logoarq5.jpg",
+          "output": "home/images/logoarq5.jpg",
+          "name": "logoarq5.jpg",
+          "category": "IMAGE",
+          "size": 2865,
+          "type": "jpg",
+          "initialSize": 2865,
+          "optimized": false,
+          "height": 0,
+          "width": 0
+        },
+        "b1d3394f": {
+          "id": "b1d3394f",
+          "path": "home/images/logoarq4.jpg",
+          "output": "home/images/logoarq4.jpg",
+          "name": "logoarq4.jpg",
+          "category": "IMAGE",
+          "size": 1719,
+          "type": "jpg",
+          "initialSize": 1719,
+          "optimized": false,
+          "height": 0,
+          "width": 0
+        },
+        "4b713921": {
+          "id": "4b713921",
+          "path": "home/images/bg1-videoelproyecto.jpg",
+          "output": "home/images/bg1-videoelproyecto.jpg",
+          "name": "bg1-videoelproyecto.jpg",
+          "category": "IMAGE",
+          "size": 154122,
+          "type": "jpg",
+          "initialSize": 154122,
+          "optimized": false,
+          "height": 0,
+          "width": 0
+        },
+        "2a659020": {
+          "id": "2a659020",
+          "path": "home/images/mobile-master1.jpg",
+          "output": "home/images/mobile-master1.jpg",
+          "name": "mobile-master1.jpg",
+          "category": "IMAGE",
+          "size": 87778,
+          "type": "jpg",
+          "initialSize": 87778,
+          "optimized": false,
+          "height": 0,
+          "width": 0
+        },
+        "c67fb7bd": {
+          "id": "c67fb7bd",
+          "path": "home/images/mobile-master2.jpg",
+          "output": "home/images/mobile-master2.jpg",
+          "name": "mobile-master2.jpg",
+          "category": "IMAGE",
+          "size": 94544,
+          "type": "jpg",
+          "initialSize": 94544,
+          "optimized": false,
+          "height": 0,
+          "width": 0
+        },
+        "b994ae20": {
+          "id": "b994ae20",
+          "path": "home/images/mobile-master3.jpg",
+          "output": "home/images/mobile-master3.jpg",
+          "name": "mobile-master3.jpg",
+          "category": "IMAGE",
+          "size": 70462,
+          "type": "jpg",
+          "initialSize": 70462,
+          "optimized": false,
+          "height": 0,
+          "width": 0
+        },
+        "84775c5b": {
+          "id": "84775c5b",
+          "path": "home/images/mobile-master4.jpg",
+          "output": "home/images/mobile-master4.jpg",
+          "name": "mobile-master4.jpg",
+          "category": "IMAGE",
+          "size": 67845,
+          "type": "jpg",
+          "initialSize": 67845,
+          "optimized": false,
+          "height": 0,
+          "width": 0
+        },
+        "628f6026": {
+          "id": "628f6026",
+          "path": "home/images/mobile-master5.jpg",
+          "output": "home/images/mobile-master5.jpg",
+          "name": "mobile-master5.jpg",
+          "category": "IMAGE",
+          "size": 69195,
+          "type": "jpg",
+          "initialSize": 69195,
+          "optimized": false,
+          "height": 0,
+          "width": 0
+        },
+        "14cb0593": {
+          "id": "14cb0593",
+          "path": "home/images/logo.png",
+          "output": "home/images/logo.png",
+          "name": "logo.png",
+          "category": "IMAGE",
+          "size": 5144,
+          "type": "png",
+          "initialSize": 5144,
+          "optimized": false,
+          "height": 0,
+          "width": 0
+        },
+        "21297d2e": {
+          "id": "21297d2e",
+          "path": "img/mobile-home.jpg",
+          "output": "img/mobile-home.jpg",
+          "name": "mobile-home.jpg",
+          "category": "IMAGE",
+          "size": 38265,
+          "type": "jpg",
+          "initialSize": 38265,
+          "optimized": false,
+          "height": 0,
+          "width": 0
+        },
+        "6a26dadd": {
+          "id": "6a26dadd",
+          "path": "img/logo-b.png",
+          "output": "img/logo-b.png",
+          "name": "logo-b.png",
+          "category": "IMAGE",
+          "size": 8405,
+          "type": "png",
+          "initialSize": 8405,
+          "optimized": false,
+          "height": 0,
+          "width": 0
+        },
+        "b8b8e946": {
+          "id": "b8b8e946",
+          "path": "img/logo-bw.png",
+          "output": "img/logo-bw.png",
+          "name": "logo-bw.png",
+          "category": "IMAGE",
+          "size": 8211,
+          "type": "png",
+          "initialSize": 8211,
+          "optimized": false,
+          "height": 0,
+          "width": 0
+        },
+        "80f29963": {
+          "id": "80f29963",
+          "path": "home/images/bg-mobile-ubicacion.jpg",
+          "output": "home/images/bg-mobile-ubicacion.jpg",
+          "name": "bg-mobile-ubicacion.jpg",
+          "category": "IMAGE",
+          "size": 82050,
+          "type": "jpg",
+          "initialSize": 82050,
+          "optimized": false,
+          "height": 0,
+          "width": 0
+        },
+        "5f9cae64": {
+          "id": "5f9cae64",
+          "path": "home/images/bg-amenities.jpg",
+          "output": "home/images/bg-amenities.jpg",
+          "name": "bg-amenities.jpg",
+          "category": "IMAGE",
+          "size": 214025,
+          "type": "jpg",
+          "initialSize": 214025,
           "optimized": false,
           "height": 0,
           "width": 0
